<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E-pacjent</string>
    <string name="hello">Witaj w program zarządzającym obchodem!</string>

    <!-- Menu -->
    <string name="menu_add">Dodaj</string>
    <string name="menu_list">Lista</string>
    <string name="menu_deleteAll">Usuń wszystko</string>
    <string name="menu_quit">Wyjście</string>
    
    <string name="delete_menu">Usuń pacjenta</string>
    <string name="edit_menu">Edytuj pacjenta</string>

    <!-- Hints -->
    <string name="name_hint">Wprowadź imię</string>
    <string name="surname_hint">Wprowadź nazwisko</string>
    <string name="plec_hint">Wprowadź płeć</string>

    <!-- Buttons -->
    <string name="BtnAdd">Dodaj</string>
    <string name="BtnBack">Powrót</string>
    <string name="cancel_btn">Anuluj</string>
    <string name="delete_btn">Usuń</string>
    <!-- End of Buttons -->

    <string name="quit">Zamknij E-pacjent</string>
    <string name="really_quit">Czy na pewno chcesz wyjść?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="radio1">Mężczyzna</string>
    <string name="radio2">Kobieta</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_list_all_pacjent">ListAllPacjent</string>
    
    <string name="confirmTitle">Czy jesteś pewien?</string>
    <string name="confirmMessage">Wpis zostanie usunięty bez możliwości przywrócenia</string>
    
    <string name="name_lbl">Imię</string>
    <string name="surname_lbl">Nazwisko</string>
    <string name="plec_lbl">Płeć</string>
    <string name="krew_lbl">Grupa krwi</string>

</resources>