<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/content1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="textPersonName|textCapWords" />

    <EditText
        android:id="@+id/content2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname_hint"
        android:inputType="textPersonName|textCapWords" />

    <EditText
        android:id="@+id/content3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/plec_hint"
        android:inputType="textPersonName|textCapWords" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1" />

        <RadioButton
            android:id="@+id/option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio2" />
    </RadioGroup>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Wybierz krew: "
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/SpinnerList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinner_array" >
    </Spinner>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/BtnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BtnAdd" />

        <Button
            android:id="@+id/BtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BtnBack" />
    </LinearLayout>

</LinearLayout>